fix: correcciones en logs de trazabilidad